language/move-lang/tests/move_check/parser/global_access_pack.exp
error: 

   ┌── tests/move_check/parser/global_access_pack.move:3:9 ───
   │
 3 │         ::S { }
   │         ^^ Unexpected '::'
   ·
 3 │         ::S { }
   │         -- Expected an expression term
   │

